--- a/public/index.html
+++ b/public/index.html
@@ -63,6 +63,7 @@
   To begin the development, run `npm start` or `yarn start`.
   To create a production bundle, use `npm run build` or `yarn build`.
 -->
+<!--<script type="module" src="%PUBLIC_URL%/js/3d/main.js"></script>-->
 <script src="%PUBLIC_URL%/js/jquery-3.2.1.slim.min.js"></script>
 <script src="%PUBLIC_URL%/js/bootstrap.min.js"></script>
 </body>
