--- a/public/index.html
+++ b/public/index.html
@@ -5,65 +5,41 @@
     <link rel="icon" href="%PUBLIC_URL%/favicon.ico"/>
     <meta name="MobileOptimized" content="320">
     <meta name="viewport" content="initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
-    <meta name="theme-color" content="#000000"/>
-    <meta
-            name="description"
-            content="Web site created using create-react-app"
-    />
+    <meta name="theme-color" content="#FFFFFF"/>
 
-    <meta name='dmca-site-verification' content=''/>
+    <!--    <meta name='dmca-site-verification' content=''/>-->
 
-    <meta name="title" content="">
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <meta name="keywords" content=""/>
+    <meta name="title" content="Satha | Computer Science & Engineering Solutions by Sathnindu Kottage">
+    <meta name="description"
+          content="Sathnindu Kottage (Satha), A full-stack developer, software developer, web designer, debugger, IT consultant, problem solver, researcher and inventor in Computer science & engineering">
+    <meta name="author" content="Sathnindu Kottage">
+    <meta name="keywords"
+          content="Sathnindu Kottage, Satha, full-stack developer, software developer, web designer, debugger, it consultant"/>
 
     <meta property="og:type" content="website">
     <meta property="og:url" content="">
-    <meta property="og:title" content="">
-    <meta property="og:description" content="">
+    <meta property="og:title" content="Satha | Computer Science & Engineering Solutions by Sathnindu Kottage">
+    <meta property="og:description"
+          content="Sathnindu Kottage (Satha), A full-stack developer, software developer, web designer, debugger, IT consultant, problem solver, researcher and inventor in Computer science & engineering">
     <meta property="og:image" content="">
 
-    <meta property="twitter:card" content="">
+    <meta property="twitter:card" content="Satha | Computer Science & Engineering Solutions by Sathnindu Kottage">
     <meta property="twitter:url" content="">
-    <meta property="twitter:title" content="">
-    <meta property="twitter:description" content="">
+    <meta property="twitter:title" content="Satha | Computer Science & Engineering Solutions by Sathnindu Kottage">
+    <meta property="twitter:description"
+          content="Sathnindu Kottage (Satha), A full-stack developer, software developer, web designer, debugger, IT consultant, problem solver, researcher and inventor in Computer science & engineering">
     <meta property="twitter:image" content="">
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png"/>
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
     <link href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp"
           rel="stylesheet">
-    <link rel="stylesheet" href="%PUBLIC_URL%/fonts/fonts.css" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
-
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>Dpacks | The world's most flexible & effortless CMS</title>
+    <link rel="stylesheet" href="%PUBLIC_URL%/fonts/fonts.css"/>
+    <title>Satha | Computer Science & Engineering Solutions by Sathnindu Kottage</title>
 </head>
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
 <div id="root"></div>
-<!--
-  This HTML file is a template.
-  If you open it directly in the browser, you will see an empty page.
-
-  You can add webfonts, meta tags, or analytics to this file.
-  The build step will place the bundled scripts into the <body> tag.
-
-  To begin the development, run `npm start` or `yarn start`.
-  To create a production bundle, use `npm run build` or `yarn build`.
--->
-<!--<script type="module" src="%PUBLIC_URL%/js/3d/main.js"></script>-->
 <script src="%PUBLIC_URL%/js/jquery-3.2.1.slim.min.js"></script>
 <script src="%PUBLIC_URL%/js/bootstrap.min.js"></script>
 </body>
