--- a/public/index.html
+++ b/public/index.html
@@ -34,6 +34,7 @@
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
     <link href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp"
           rel="stylesheet">
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/bootstrap/bootstrap.min.css"/>
     <link rel="stylesheet" href="%PUBLIC_URL%/fonts/fonts.css"/>
     <title>Satha | Computer Science & Engineering Solutions by Sathnindu Kottage</title>
 </head>
