--- a/public/index.html
+++ b/public/index.html
@@ -17,20 +17,20 @@
           content="Sathnindu Kottage, Satha, full-stack developer, software developer, web designer, debugger, it consultant"/>
 
     <meta property="og:type" content="website">
-    <meta property="og:url" content="">
+    <meta property="og:url" content="https://bysatha.com">
     <meta property="og:title" content="Satha | Computer Science & Engineering Solutions by Sathnindu Kottage">
     <meta property="og:description"
           content="Sathnindu Kottage (Satha), A full-stack developer, software developer, web designer, debugger, IT consultant, problem solver, researcher and inventor in Computer science & engineering">
-    <meta property="og:image" content="">
+    <meta property="og:image" content="%PUBLIC_URL%/og.jpg">
 
     <meta property="twitter:card" content="Satha | Computer Science & Engineering Solutions by Sathnindu Kottage">
-    <meta property="twitter:url" content="">
+    <meta property="twitter:url" content="https://bysatha.com">
     <meta property="twitter:title" content="Satha | Computer Science & Engineering Solutions by Sathnindu Kottage">
     <meta property="twitter:description"
           content="Sathnindu Kottage (Satha), A full-stack developer, software developer, web designer, debugger, IT consultant, problem solver, researcher and inventor in Computer science & engineering">
-    <meta property="twitter:image" content="">
+    <meta property="twitter:image" content="%PUBLIC_URL%/og.jpg">
 
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png"/>
+    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico"/>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
     <link href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp"
           rel="stylesheet">
