--- a/public/index.html
+++ b/public/index.html
@@ -21,14 +21,14 @@
     <meta property="og:title" content="Satha | Computer Science & Engineering Solutions by Sathnindu Kottage">
     <meta property="og:description"
           content="Sathnindu Kottage (Satha), A full-stack developer, software developer, web designer, debugger, IT consultant, problem solver, researcher and inventor in Computer science & engineering">
-    <meta property="og:image" content="%PUBLIC_URL%/og.jpg">
+    <meta property="og:image" content="https://bysatha.netlify.app/og.jpg">
 
     <meta property="twitter:card" content="Satha | Computer Science & Engineering Solutions by Sathnindu Kottage">
     <meta property="twitter:url" content="https://bysatha.com">
     <meta property="twitter:title" content="Satha | Computer Science & Engineering Solutions by Sathnindu Kottage">
     <meta property="twitter:description"
           content="Sathnindu Kottage (Satha), A full-stack developer, software developer, web designer, debugger, IT consultant, problem solver, researcher and inventor in Computer science & engineering">
-    <meta property="twitter:image" content="%PUBLIC_URL%/og.jpg">
+    <meta property="twitter:image" content="https://bysatha.netlify.app/og.jpg">
 
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico"/>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
