--- a/public/index.html
+++ b/public/index.html
@@ -53,6 +53,10 @@
         })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
     </script>
 
+    <!-- TrustBox script -->
+    <script type="text/javascript" src="https://widget.trustpilot.com/bootstrap/v5/tp.widget.bootstrap.min.js" async></script>
+    <!-- End TrustBox script -->
+
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico"/>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
     <link href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp"
