--- a/public/index.html
+++ b/public/index.html
@@ -17,6 +17,8 @@
     <meta name="keywords"
           content="Sathnindu Kottage, Satha, full-stack developer, software developer, web designer, debugger, it consultant"/>
 
+    <meta name="copyrighted-site-verification" content="f0825bcac52291a6" />
+
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://bysatha.com">
     <meta property="og:title" content="Satha | Computer Science & Engineering Solutions by Sathnindu Kottage">
