--- a/public/index.html
+++ b/public/index.html
@@ -101,5 +101,6 @@
 <div id="root"></div>
 <script src="%PUBLIC_URL%/js/jquery-3.2.1.slim.min.js"></script>
 <script src="%PUBLIC_URL%/js/bootstrap.min.js"></script>
+<script src="https://static.copyrighted.com/badges/helper.js"></script>
 </body>
 </html>
