--- a/public/index.html
+++ b/public/index.html
@@ -2,101 +2,42 @@
 <html lang="en">
 <head>
     <meta charset="utf-8"/>
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico"/>
+<!--    <link rel="icon" href="https://ethpay.bysatha.com/favicon.ico"/>-->
     <meta name="MobileOptimized" content="320">
     <meta name="viewport" content="initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0, user-scalable=no"/>
-    <meta name="theme-color" content="#FFFFFF"/>
+    <meta name="theme-color" content="#000"/>
+    <meta name="description" content=""/>
+    <title>EthPay</title>
 
-    <!--    <meta name='dmca-site-verification' content=''/>-->
-    <title>Satha | Computer Science & Engineering Solutions by Sathnindu Kottage</title>
-
-    <meta name="title" content="Satha | Computer Science & Engineering Solutions by Sathnindu Kottage">
-    <meta name="description"
-          content="Sathnindu Kottage (Satha), A full-stack developer, software developer, web designer, debugger, IT consultant, problem solver, researcher and inventor in Computer science & engineering">
+    <meta name="title" content="EthPay">
+    <meta name="description" content="">
     <meta name="author" content="Sathnindu Kottage">
-    <meta name="keywords"
-          content="Sathnindu Kottage, Satha, full-stack developer, software developer, web designer, debugger, it consultant"/>
-
-    <meta name="copyrighted-site-verification" content="f0825bcac52291a6" />
+    <meta name="keywords" content=""/>
 
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://bysatha.com">
-    <meta property="og:title" content="Satha | Computer Science & Engineering Solutions by Sathnindu Kottage">
-    <meta property="og:description"
-          content="Sathnindu Kottage (Satha), A full-stack developer, software developer, web designer, debugger, IT consultant, problem solver, researcher and inventor in Computer science & engineering">
-    <meta property="og:image" content="https://bysatha.com/og.jpg">
+    <meta property="og:url" content="https://ethpay.bysatha.com">
+    <meta property="og:title" content="EthPay">
+    <meta property="og:description" content="">
+    <meta property="og:image" content="https://ethpay.bysatha.com/og.png">
 
-    <meta property="twitter:card" content="Satha | Computer Science & Engineering Solutions by Sathnindu Kottage">
-    <meta property="twitter:url" content="https://bysatha.com">
-    <meta property="twitter:title" content="Satha | Computer Science & Engineering Solutions by Sathnindu Kottage">
-    <meta property="twitter:description"
-          content="Sathnindu Kottage (Satha), A full-stack developer, software developer, web designer, debugger, IT consultant, problem solver, researcher and inventor in Computer science & engineering">
-    <meta property="twitter:image" content="https://bysatha.com/og.jpg">
+    <meta property="twitter:card" content="EthPay">
+    <meta property="twitter:url" content="https://ethpay.bysatha.com">
+    <meta property="twitter:title" content="EthPay">
+    <meta property="twitter:description" content="">
+    <meta property="twitter:image" content="https://ethpay.bysatha.com/og.png">
 
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-0TPH2150SR"></script>
-    <script>
-        window.dataLayer = window.dataLayer || [];
-        function gtag(){dataLayer.push(arguments);}
-        gtag('js', new Date());
-
-        gtag('config', 'G-0TPH2150SR');
-    </script>
-
-    <!-- Hotjar Tracking Code for https://bysatha.com/ -->
-    <script>
-        (function(h,o,t,j,a,r){
-            h.hj=h.hj||function(){(h.hj.q=h.hj.q||[]).push(arguments)};
-            h._hjSettings={hjid:3057548,hjsv:6};
-            a=o.getElementsByTagName('head')[0];
-            r=o.createElement('script');r.async=1;
-            r.src=t+h._hjSettings.hjid+j+h._hjSettings.hjsv;
-            a.appendChild(r);
-        })(window,document,'https://static.hotjar.com/c/hotjar-','.js?sv=');
-    </script>
-
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/favicon.ico"/>
+    <link rel="apple-touch-icon" href="https://ethpay.bysatha.com/logo192.png"/>
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
-    <link href="https://fonts.googleapis.com/css?family=Material+Icons|Material+Icons+Outlined|Material+Icons+Two+Tone|Material+Icons+Round|Material+Icons+Sharp"
-          rel="stylesheet">
-    <link rel="stylesheet" href="%PUBLIC_URL%/css/bootstrap/bootstrap.min.css"/>
-    <link rel="stylesheet" href="%PUBLIC_URL%/fonts/fonts.css"/>
 
-    <!-- Start of Async Drift Code -->
-    <script>
-        "use strict";
-        !function() {
-            var t = window.driftt = window.drift = window.driftt || [];
-            if (!t.init) {
-                if (t.invoked) return void (window.console && console.error && console.error("Drift snippet included twice."));
-                t.invoked = !0, t.methods = [ "identify", "config", "track", "reset", "debug", "show", "ping", "page", "hide", "off", "on" ],
-                    t.factory = function(e) {
-                        return function() {
-                            var n = Array.prototype.slice.call(arguments);
-                            return n.unshift(e), t.push(n), t;
-                        };
-                    }, t.methods.forEach(function(e) {
-                    t[e] = t.factory(e);
-                }), t.load = function(t) {
-                    var e = 3e5, n = Math.ceil(new Date() / e) * e, o = document.createElement("script");
-                    o.type = "text/javascript", o.async = !0, o.crossorigin = "anonymous", o.src = "https://js.driftt.com/include/" + n + "/" + t + ".js";
-                    var i = document.getElementsByTagName("script")[0];
-                    i.parentNode.insertBefore(o, i);
-                };
-            }
-        }();
-        drift.SNIPPET_VERSION = '0.3.1';
-        drift.load('f9t685fhbue9');
-    </script>
-    <!-- End of Async Drift Code -->
-
-
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/bootstrap/bootstrap.min.css" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/fonts/fonts.css" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/css/main.css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 </head>
-<body>
+<body id="body">
 <noscript>You need to enable JavaScript to run this app.</noscript>
 <div id="root"></div>
 <script src="%PUBLIC_URL%/js/jquery-3.2.1.slim.min.js"></script>
 <script src="%PUBLIC_URL%/js/bootstrap.min.js"></script>
-<script src="https://static.copyrighted.com/badges/helper.js"></script>
 </body>
 </html>
