--- a/public/index.html
+++ b/public/index.html
@@ -8,29 +8,29 @@
     <meta name="theme-color" content="#FFFFFF"/>
 
     <!--    <meta name='dmca-site-verification' content=''/>-->
-    <title>Satha | Computer Science & Engineering Solutions by Sathnindu Kottage</title>
+    <title>By Satha | Sathnindu Kottage</title>
 
-    <meta name="title" content="Satha | Computer Science & Engineering Solutions by Sathnindu Kottage">
+    <meta name="title" content="By Satha | Sathnindu Kottage">
     <meta name="description"
-          content="Sathnindu Kottage (Satha), A full-stack developer, software developer, web designer, debugger, IT consultant, problem solver, researcher and inventor in Computer science & engineering">
+          content="A professional in the industry. Software Engineer Major in the University. Researcher and an inventor in life.">
     <meta name="author" content="Sathnindu Kottage">
     <meta name="keywords"
-          content="Sathnindu Kottage, Satha, full-stack developer, software developer, web designer, debugger, it consultant"/>
+          content="Sathnindu Kottage, Satha, software engineering, computer science, it consultant"/>
 
     <meta name="copyrighted-site-verification" content="f0825bcac52291a6" />
 
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://bysatha.com">
-    <meta property="og:title" content="Satha | Computer Science & Engineering Solutions by Sathnindu Kottage">
+    <meta property="og:title" content="By Satha | Sathnindu Kottage">
     <meta property="og:description"
-          content="Sathnindu Kottage (Satha), A full-stack developer, software developer, web designer, debugger, IT consultant, problem solver, researcher and inventor in Computer science & engineering">
+          content="A professional in the industry. Software Engineer Major in the University. Researcher and an inventor in life. ">
     <meta property="og:image" content="https://bysatha.com/og.jpg">
 
-    <meta property="twitter:card" content="Satha | Computer Science & Engineering Solutions by Sathnindu Kottage">
+    <meta property="twitter:card" content="By Satha | Sathnindu Kottage">
     <meta property="twitter:url" content="https://bysatha.com">
-    <meta property="twitter:title" content="Satha | Computer Science & Engineering Solutions by Sathnindu Kottage">
+    <meta property="twitter:title" content="By Satha | Sathnindu Kottage">
     <meta property="twitter:description"
-          content="Sathnindu Kottage (Satha), A full-stack developer, software developer, web designer, debugger, IT consultant, problem solver, researcher and inventor in Computer science & engineering">
+          content="A professional in the industry. Software Engineer Major in the University. Researcher and an inventor in life. ">
     <meta property="twitter:image" content="https://bysatha.com/og.jpg">
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
