--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
 
     <meta name="title" content="By Satha | Sathnindu Kottage">
     <meta name="description"
-          content="A professional in the industry. Software Engineering Major at the University. A researcher & inventor at rest.">
+          content="A professional in the industry. Software engineering major at the University. A researcher & inventor at rest.">
     <meta name="author" content="Sathnindu Kottage">
     <meta name="keywords"
           content="Sathnindu Kottage, Satha, software engineering, computer science, it consultant"/>
@@ -23,14 +23,14 @@
     <meta property="og:url" content="https://bysatha.com">
     <meta property="og:title" content="By Satha | Sathnindu Kottage">
     <meta property="og:description"
-          content="A professional in the industry. Software Engineering Major at the University. A researcher & inventor at rest.">
+          content="A professional in the industry. Software engineering major at the University. A researcher & inventor at rest.">
     <meta property="og:image" content="https://bysatha.com/og.jpg">
 
     <meta property="twitter:card" content="By Satha | Sathnindu Kottage">
     <meta property="twitter:url" content="https://bysatha.com">
     <meta property="twitter:title" content="By Satha | Sathnindu Kottage">
     <meta property="twitter:description"
-          content="A professional in the industry. Software Engineering Major at the University. A researcher & inventor at rest.">
+          content="A professional in the industry. Software engineering major at the University. A researcher & inventor at rest.">
     <meta property="twitter:image" content="https://bysatha.com/og.jpg">
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
